# client-server

./: Cargo.toml  README.md  build.zig  build.zig.zon
calculator/: Cargo.toml  build.rs
calculator-rpc/: Cargo.toml
calculator-rpc/proto/: calculator.proto
calculator-rpc/src/: client.rs  server.rs
calculator/proto/: calculator.proto
calculator/src/: client.rs  server.rs
uppercaser/: Cargo.toml
uppercaser/src/: client.rs  client.zig
