[package]
name = "calculator-rpc"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "calculator-client"
path = "src/client.rs"
test = false
bench = false

[[bin]]
name = "calculator-server"
path = "src/server.rs"
test = false
bench = false

[dependencies]
prost = "0.13.3"
tokio = { version = "1.41.1", features = ["macros", "rt-multi-thread"] }
tonic = "0.12.3"

[build-dependencies]
tonic-build = "0.12.3"
